--- a/CapaVista/CapaVista.csproj
+++ b/CapaVista/CapaVista.csproj
@@ -193,12 +193,6 @@
     <Compile Include="FrmGestionProveedores.Designer.cs">
       <DependentUpon>FrmGestionProveedores.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmPermisosRol.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmPermisosRol.Designer.cs">
-      <DependentUpon>FrmPermisosRol.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrmRecupero.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -334,6 +328,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CV_Seguridad.cs" />
+    <EmbeddedResource Include="FrmActualizarPregunta.resx">
+      <DependentUpon>FrmActualizarPregunta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmComprobanteVenta.resx">
       <DependentUpon>FrmComprobanteVenta.cs</DependentUpon>
     </EmbeddedResource>
@@ -411,9 +408,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionProveedores.resx">
       <DependentUpon>FrmGestionProveedores.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FrmPermisosRol.resx">
-      <DependentUpon>FrmPermisosRol.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRecupero.resx">
       <DependentUpon>FrmRecupero.cs</DependentUpon>
