--- a/CapaVista/packages.config
+++ b/CapaVista/packages.config
@@ -3,6 +3,7 @@
   <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net48" />
   <package id="Guna.UI2.WinForms" version="2.0.4.7" targetFramework="net48" />
   <package id="Konscious.Security.Cryptography.Blake2" version="1.1.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net48" />
   <package id="System.Memory" version="4.6.3" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net48" />
